[fix]サービスの登録メソッドの軽微な修正
・studentsCoursesList.get(0)をstudentsCoursesList.getFirst()に再修正
・理由：JDK 21 ではgetFirst()が利用できるから